--- a/lang/en.json
+++ b/lang/en.json
@@ -1,6 +1,6 @@
 {
   "title": "Astronomy widget",
-  "description": "Calculates the position of the sun and moon for the given location",
+  "description": "Calculates the position of the sun and moon for the given location.",
   "latitude": "Latitude",
   "longitude": "Longitude",
   "day": "Day",
