--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,5 @@
 {
-  "title": "Astronomy widget",
+  "title": "Astronomy Module",
   "description": "Calculates the position of the sun and moon for the given location.",
   "latitude": "Latitude",
   "longitude": "Longitude",
