--- a/lang/en.json
+++ b/lang/en.json
@@ -1,9 +1,8 @@
 {
   "title": "Astronomy Module",
-  "description": "Calculates the position of the sun and moon for the given location.",
+  "description": "Calculates the position of the sun for the given location. The module provides various metrics and emits events when the sun reaches certain positions.",
   "latitude": "Latitude",
   "longitude": "Longitude",
   "day": "Day",
   "night": "Night"
-  
 }
