--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+1.03 2015 Dec 19, Sat
+    * update astronomy before calling event
+    * German translation
+
 1.02 2015 Nov 15, Sun
     * Cleanups
 
