Rename title/description key to make module work in appstore

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,6 +1,6 @@
 {
-  "title": "Astronomy Module",
-  "description": "Calculates the position of the sun for the given location. The module provides various metrics and emits events when the sun reaches certain positions.",
+  "m_title" : "Astronomy Module",
+  "m_descr": "Calculates the position of the sun for the given location. The module provides various metrics and emits events when the sun reaches certain positions.",
   "latitude": "Latitude",
   "longitude": "Longitude",
   "day": "Day",
