--- a/lang/de.json
+++ b/lang/de.json
@@ -1,6 +1,6 @@
 {
-  "title": "Astronomie Module",
-  "description": "Berechnet die aktuelle Position der Sonne für die angegebenen Koordinaten. Liefert eine Vielzahl an Metriken und Events für andere Automatisierungs Module.Í",
+  "m_title" : "Astronomie Modul",
+  "m_descr": "Berechnet die aktuelle Position der Sonne für die angegebenen Koordinaten. Liefert eine Vielzahl an Metriken und Events für andere Automatisierungs Module.Í",
   "latitude": "Breite",
   "longitude": "Länge",
   "day": "Tag",
