--- a/lang/de.json
+++ b/lang/de.json
@@ -1,8 +1,8 @@
 {
   "m_title" : "Astronomie Modul",
-  "m_descr": "Berechnet die aktuelle Position der Sonne für die angegebenen Koordinaten. Liefert eine Vielzahl an Metriken und Events für andere Automatisierungs Module.Í",
-  "latitude": "Breite",
-  "longitude": "Länge",
+  "m_descr": "Berechnet die aktuelle Position der Sonne für die angegebenen Koordinaten. Liefert eine Vielzahl an Metriken wie zB. den Sonnenstand und Azimut, und Events für andere Automatisierungs Module. Die Daten aus diesm Modul können für die Steuerung von Beschattun oder Beleuchtung abhängig vom Sonnenstand benutzt werden.",
+  "latitude": "Geografische Breite",
+  "longitude": "Geografische Länge",
   "day": "Tag",
   "night": "Nacht"
   
