--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+1.05 2016 Jan 19, Tue
+    * Improve description
+    * Rename title/description key to make module work in appstore
+
 1.04 2016 Jan 03, Sun
     * Use loop to handle astronomical events. Not unreliable timeouts
     * Update readme & homepage
