--- a/lang/en.json
+++ b/lang/en.json
@@ -1,8 +1,8 @@
 {
-  "m_title" : "Astronomy Module",
-  "m_descr": "Calculates the position of the sun for the given location. The module provides various metrics like sun altitude and azimuth, and emits events when the sun reaches certain positions. This module can be used to controll light scenes or shading based on the solar position.",
-  "latitude": "Latitude",
-  "longitude": "Longitude",
-  "day": "Day",
-  "night": "Night"
+   "day" : "Day",
+   "latitude" : "Latitude",
+   "longitude" : "Longitude",
+   "m_descr" : "Calculates the position of the sun for the given location. The module provides various metrics like sun altitude and azimuth, and emits events when the sun reaches certain positions. This module can be used to controll light scenes or shading based on the solar position.\nCheck https://github.com/maros/Zway-Astronomy//blob/master/README.md for detailed documentation.",
+   "m_title" : "Astronomy Module",
+   "night" : "Night"
 }
