--- a/lang/de.json
+++ b/lang/de.json
@@ -2,7 +2,7 @@
    "day" : "Tag",
    "latitude" : "Geografische Breite",
    "longitude" : "Geografische Länge",
-   "m_descr" : "Berechnet die aktuelle Position der Sonne für die angegebenen Koordinaten. Liefert eine Vielzahl an Metriken wie zB. den Sonnenstand und Azimut, und Events für andere Automatisierungs Module. Die Daten aus diesm Modul können für die Steuerung von Beschattun oder Beleuchtung abhängig vom Sonnenstand benutzt werden.<br>Siehe <a href=https://github.com/maros/Zway-Astronomy/blob/master/README.md>github.com/maros/Zway-Astronomy</a> für detailliertere Dokumentation.",
+   "m_descr" : "Berechnet die aktuelle Position der Sonne über dem Horizont für die angegebenen Koordinaten. Liefert eine Vielzahl an Metriken wie zB. den Sonnenstand und Azimut und Events für andere Automatisierungs Module. Die Daten aus diesm Modul können für die Steuerung von Beschattun oder Beleuchtung abhängig vom Sonnenstand benutzt werden.<br>Siehe <a href=https://github.com/maros/Zway-Astronomy/blob/master/README.md>github.com/maros/Zway-Astronomy</a> für detailliertere Dokumentation.",
    "m_title" : "Astronomie Modul",
    "night" : "Nacht"
 }
