--- a/lang/de.json
+++ b/lang/de.json
@@ -1,7 +1,8 @@
 {
    "day" : "Tag",
-   "latitude" : "Geografische Breite",
-   "longitude" : "Geografische Länge",
+   "latitude_label" : "Geografische Breite",
+   "longitude_label" : "Geografische Länge",
+   "coordinate_helper" : "In Dezimaler Notation",
    "m_descr" : "Berechnet die aktuelle Position der Sonne über dem Horizont für die angegebenen Koordinaten. Liefert eine Vielzahl an Metriken wie zB. den Sonnenstand und Azimut und Events für andere Automatisierungs Module. Die Daten aus diesm Modul können für die Steuerung von Beschattun oder Beleuchtung abhängig vom Sonnenstand benutzt werden.<br>Siehe <a href=https://github.com/maros/Zway-Astronomy/blob/master/README.md>github.com/maros/Zway-Astronomy</a> für detailliertere Dokumentation.",
    "m_title" : "Astronomie Modul",
    "night" : "Nacht"
