--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,12 @@
+1.08 2016 Apr 20, Wed
+    * Update documentation
+    * Fix translation
+    * Add azimut device
+    * Set probeType
+    * this -> self
+    * Make sure we require decimal notation coordinates
+    * Update installation howto
+
 1.07 2016 Feb 26, Fri
     * Cleanup
 	* Fix interval stop
