--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+1.10 2019 Apr 26, Fri
+    * Cleanup
+    * Round values to two digits
+    * Update copyright
+
 1.09 2016 Oct 26, Wed
     * Create and update devices only if configured #5
     * Fix module icon #6
